# QAX

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
qax/: __init__.py  core.py  operators.py  state.py
qax/circuit/: core.py
qax/plotter/: __init__.py  sympy_display.py
qax/utils/: device.py
tests/: test_core.py  test_operators.py  test_state.py
