[project]
name = "qax"
version = "0.1.0"
description = "High-Performance Quantum System Simulation Library using JAX"
authors = [
    { name = "Ryo Maekura", email = "ryomaekura@g.ecc.u-tokyo.ac.jp" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "chex>=0.1.91",
    "diffrax>=0.7.0",
    "flax>=0.11.2",
    "ipython>=9.5.0",
    "jax[cuda12]>=0.7.1",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "optax>=0.2.5",
    "scipy>=1.16.1",
    "sympy>=1.14.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
    "scalene>=1.5.54",
]

[tool.ruff]
ignore = [
    "F722",  # Syntax error in forward annotation (for jaxtyping)
    "F821",  # Undefined name (for jaxtyping dimensions)
]
