[project]
name = "qax"
version = "0.1.0"
description = "High-Performance Quantum System Simulation Library using JAX"
authors = [
    { name = "Ryo Maekura", email = "ryomaekura@g.ecc.u-tokyo.ac.jp" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
    "scalene>=1.5.54",
]

[tool.ruff]
ignore = [
    "F722",  # Syntax error in forward annotation (for jaxtyping)
    "F821",  # Undefined name (for jaxtyping dimensions)
]
