[project]
name = "qax"
version = "0.1.0"
description = "High-Performance Quantum System Simulation Library using JAX"
authors = [
    { name = "Ryo Maekura", email = "ryomaekura@g.ecc.u-tokyo.ac.jp" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "diffrax>=0.7.0",
    "flax>=0.11.2",
    "jax[cuda12]>=0.7.2",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "optax>=0.2.6",
    "scipy>=1.16.2",
    "sympy>=1.14.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "autodoc-pydantic>=2.2.0",
    "chex>=0.1.91",
    "ipykernel>=6.30.1",
    "jupyter-client>=8.6.3",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
    "scalene>=1.5.54",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.ruff]
ignore = [
    "F722",  # Syntax error in forward annotation (for jaxtyping)
    "F821",  # Undefined name (for jaxtyping dimensions)
]
